docs: groups appwrite route added
